trying to fix parallax scroll on ios

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -6,6 +6,7 @@
   align-items: center;
   background-color: $radiant-primary-teal;
   height: 4rem;
+  width: 100%;
 
   @media only screen and (max-width: 600px) {
     justify-content: flex-start;
