--- a/src/app/home/components/home-page/home-page.component.scss
+++ b/src/app/home/components/home-page/home-page.component.scss
@@ -1,32 +1,52 @@
 @import '../../../../assets/styles/colors.scss';
+@import '../../../../assets/styles/mixins.scss';
 
 .hero {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background: url('../../../../assets/images/unsplash/chelsea-shapouri-r40EYKVyutI-unsplash.jpg');
-  min-height: 50rem;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
 
-  @media only screen and (max-width: 600px) {
-    height: 10rem;
+  @media screen and (min-width: 600px) {
+    width: 100%;
+    min-height: 50rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  @media screen and (max-width: 600px) {
+    @include parallax-scroll;
   }
 
   &-text {
-
-    p {
-      @media only screen and (max-width: 600px) {
+    @media only screen and (max-width: 600px) {
+      p {
         font-size: 40px;
       }
 
+      height: 100vh;
+    }
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    p {
       margin: 0;
       color: #eff5f5;
       font-weight: 500;
       font-size: 61px;
     }
+  }
+}
+
+.content {
+  @media screen and (max-width: 600px) {
+    position: absolute;
   }
 }
 
