--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,5 @@
 body {
   margin: 0;
   position: absolute;
-  // width: 100%;
+  width: 100%;
 }
-
-// html, body {
-//   overflow-x: hidden;
-// }
